<resources>
    <string name="app_name">Headache</string>

    <string name="main_headache_label">Zaznacz w skali od 1–4 natężenie bólu</string>

    <string name="dialog_positive_button">Potwierdz</string>
    <string name="dialog_negative_button">Anuluj</string>

    <string name="all_headache_adding">Zapisuje w bazie …</string>
    <string name="all_headache_added">Zapisano poprawnie!</string>
    <string name="all_cancel_btn">ANULUJ</string>

    <string name="menu_set_current_date_time">Ustaw aktualny czas</string>
    <string name="menu_set_date">Zmień date</string>
    <string name="menu_set_time">Zmien godzine</string>
    <string name="menu_refresh_history">Odśwież dane</string>

    <string name="toast_date_time_label_updated">Godzina i data została zmieniona</string>
    <string name="history_headache_label">Historia</string>
    <string name="item_remove_headache">Usun wpis</string>
    <string name="item_headache_removed">Wpis został usunięty</string>
    <string name="all_headaches_updated">Odświezono wpisy</string>
    <string name="all_date_updated">Odświeżono date i godzine</string>
    <string name="headache_scale_1">Headache scale 1</string>
    <string name="headache_scale_2">Headache scale 2</string>
    <string name="headache_scale_3">Headache scale 3</string>
    <string name="headache_scale_4">Headache scale 4</string>

    <string-array name="headache_text_scale">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_headache">Headache</string>

</resources>
