<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_set_date"
        android:icon="@drawable/set_date"
        android:iconTint="@color/icons"
        android:orderInCategory="1"
        android:title="@string/menu_set_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_set_time"
        android:icon="@drawable/set_time"
        android:iconTint="@color/icons"
        android:orderInCategory="2"
        android:title="@string/menu_set_time"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_set_current_date_time"
        android:icon="@drawable/set_current_date"
        android:iconTint="@color/icons"
        android:orderInCategory="3"
        android:title="@string/menu_set_current_date_time"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/menu_refresh_history"
        android:iconTint="@color/icons"
        android:orderInCategory="4"
        android:title="@string/menu_refresh_history"
        app:showAsAction="ifRoom" />

</menu>