<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HeadacheActivity"
    tools:showIn="@layout/activity_headache">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/headache_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
        <!--tools:context="pl.mzap.headache.NewHeadacheActivity"-->
        <!--tools:showIn="@layout/activity_new_headache">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/date_header_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Sr, 27 Luty"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="@dimen/header_text_label_size" />

            <TextView
                android:id="@+id/time_header_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="15:15"
                android:textAlignment="center"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/header_time_label_size" />

            <include
                layout="@layout/view_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/intro_header_rating_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/main_headache_label"
                android:textAlignment="center"
                android:textColor="@color/secondary_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_header_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/rating_btn_layout_margin_horizontal"
                android:layout_marginStart="@dimen/rating_btn_layout_margin_horizontal"
                android:layout_marginTop="@dimen/rating_btn_layout_margin_top"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro_header_rating_bar">

                <ImageButton
                    android:id="@+id/rating_btn_1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/headache_scale_1"
                    app:srcCompat="@drawable/rating_btn_1" />

                <ImageButton
                    android:id="@+id/rating_btn_2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/headache_scale_2"
                    app:srcCompat="@drawable/rating_btn_2" />

                <ImageButton
                    android:id="@+id/rating_btn_3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/headache_scale_3"
                    app:srcCompat="@drawable/rating_btn_3" />

                <ImageButton
                    android:id="@+id/rating_btn_4"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/headache_scale_4"
                    app:srcCompat="@drawable/rating_btn_4" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.constraint.ConstraintLayout>